--- a/wlwsd/res/values/strings.xml
+++ b/wlwsd/res/values/strings.xml
@@ -2,4 +2,9 @@
 <resources>
 
     <string name="app_name">网络温湿度监控系统</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_login">LoginActivity</string>
+
 </resources>
