--- a/MobileSafe/res/values/strings.xml
+++ b/MobileSafe/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="is_positive">确定</string>
     <string name="title_activity_home">Home</string>
-    
+
     <!-- 主界面 -->
     <string name="safe">手机防盗</string>
     <string name="callmsgsafe">通讯卫士</string>
@@ -14,7 +14,8 @@
     <string name="netmanager">流量统计</string>
     <string name="trojan">手机杀毒</string>
     <string name="clear">缓存清理</string>
-	<string name="atools">高级工具</string>
-	<string name="settings">设置中心</string>
-	
+    <string name="atools">高级工具</string>
+    <string name="settings">设置中心</string>
+    <string name="title_activity_safe">SafeActivity</string>
+
 </resources>
