MobileSafe项目：添加了软件管理功能，未完。

--- a/MobileSafe/res/values/strings.xml
+++ b/MobileSafe/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="title_activity_tools">ToolsActivity</string>
     <string name="title_activity_number_query">NumberQueryActivity</string>
     <string name="title_activity_callmsgsafe">CallmsgsafeActivity</string>
+    <string name="title_activity_app_manager">AppManagerActivity</string>
 
 </resources>
