--- a/NFCTestDemo/res/values/strings.xml
+++ b/NFCTestDemo/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">NFCTestDemo</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_show_nfctext">ShowNFCTextActivity</string>
+    <string name="title_activity_input_text">InputTextActivity</string>
 
 </resources>
